Fix header alignment

--- a/_sass/global/_header.scss
+++ b/_sass/global/_header.scss
@@ -98,6 +98,7 @@ header#site-navigation ul#menu-items {
     &.closed {
       display: inline-block;
       margin: 0;
+      padding-left: 33%;
     }
   }
   
